@@ -1,25 +1,25 @@
 package ua.malysh.jwt;
 
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.stream.Collectors;
+
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 
-import java.util.ArrayList;
-import java.util.Collection;
-
 public class JwtRoleConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
 
     @Override
-    public Collection convert(Jwt jwt) {
+    public Collection<GrantedAuthority> convert(Jwt jwt) {
 
         @SuppressWarnings("unchecked")
-        var roles = (ArrayList<String>) jwt.getClaims().get("roles");
+        final var roles = (ArrayList<String>) jwt.getClaims().get("roles");
 
-        if (roles == null || roles.isEmpty()) {
-            return new ArrayList<>();
-        }
-
-        return roles.stream().map(SimpleGrantedAuthority::new).toList();
+        return roles
+                .stream()
+                .map(SimpleGrantedAuthority::new)
+                .collect(Collectors.toList());
     }
 }
